--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,50 @@
 <html>
 <head>
   <title>Fotosite</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<!--navbar starts here-->
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+            data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <div class="home navbar-brand">
+              <a href="#">WASEEM NAWAZ</a>
+            </div><!-- end home -->
+          </div><!-- end navbar header -->
+            <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#intro">Me</a></li>
+                <li><a href="#abt">About/CV</a></li>
+                <li><a href="#work2">Work</a></li>
+                <li><a href="#kntkto">Contact</a></li>
+              </ul>
+            </div><!-- collapse -->
+        </div><!-- end container -->
+      </nav><!-- end navbar -->
+
 <%= yield %>
+
+<footer>
+      <div class="copyright">
+        &copy; Waseem Nawaz 2016
+      </div>
+    </footer>
 
 </body>
 </html>
