--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,15 +25,15 @@
               <span class="icon-bar"></span>
             </button>
             <div class="home navbar-brand">
-              <a href="#">WASEEM NAWAZ</a>
+              <a href="#">Ojos Que Aprenden A Mirar</a>
             </div><!-- end home -->
           </div><!-- end navbar header -->
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="#intro">Me</a></li>
-                <li><a href="#abt">About/CV</a></li>
-                <li><a href="#work2">Work</a></li>
-                <li><a href="#kntkto">Contact</a></li>
+                <!--li><a href="#intro">Me</a></li-->
+                <li><a href="#abt">SOBRE</a></li>
+                <li><a href="#work2">TRABAJOS</a></li>
+                <li><a href="#kntkto">CONTACTO</a></li>
               </ul>
             </div><!-- collapse -->
         </div><!-- end container -->
