--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -20,8 +20,13 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :image_url %><br>
-    <%= f.text_field :image_url %>
+    <%= f.label :avatar %><br>
+    <%= f.file_field :avatar %>
+    <% if f.object.avatar? %>
+      <%= image_tag f.object.avatar %>
+      <%= f.label :remove_avatar %>
+      <%= f.check_box :remove_avatar %> 
+    <% end %>
   </div>
   <div class="actions">
     <%= f.submit %>
